[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Mada.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/UI/ErrorReport.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="Control" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 101.56
margin_top = 95.0
margin_right = 2962.56
margin_bottom = 1424.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 1 )
text = "This is the text "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 108.999
margin_top = 895.34
margin_right = 1016.0
margin_bottom = 1072.34
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "Issue Type:"
scroll_active = false

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 467.669
margin_top = 896.33
margin_right = 1470.67
margin_bottom = 1076.33
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="."]
margin_left = 1326.55
margin_top = 898.277
margin_right = 1904.55
margin_bottom = 1133.28
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 1 )
text = "Submit"

[node name="CancelButton" type="Button" parent="."]
margin_left = 1582.28
margin_top = 895.991
margin_right = 2160.28
margin_bottom = 1130.99
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/font = ExtResource( 1 )
text = "Cancel"
[connection signal="gui_input" from="TextEdit" to="." method="_on_TextEdit_gui_input"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
